--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Social Solution</title>
 </head>
 
 <body>
+    <!-- Header with Navbar that links to three different sections of the page -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,9 +25,11 @@
             </ul>
         </nav>
     </header>
+
     <div class=".hero">
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="Meeting around boardroom" id="digital-marketing-meeting" />
     </div>
+    <!-- Left side panel with three cards containing an image and paragraph -->
     <section class="content">
         <div id="search-engine-optimization" class="cont-img">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with laptop, coffee cup, and notebook" class="float-left" />
@@ -50,6 +53,7 @@
             </p>
         </div>
     </section>
+    <!-- Right side panel with 3 benefit items -->
     <section class="benefits">
         <div class="benefit">
             <h3>Lead Generation</h3>
@@ -73,6 +77,7 @@
             </p>
         </div>
     </section>
+    <!-- Footer containing copyright-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
